# alphasense_case_study

./: .gitignore  README.md
1/: README.md  alphasenseingestor.py  pyproject.toml
1/data/: attachment-1.html  attachment-2.html  document-1.txt  metadata.json
2/: README.md
